Alteração nas animações dos links e cards

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
                         <img class="logo" src="./assets/img/logo.png" alt="logo News G2" />
                     </li>
                     <li class="li-header">
-                        <a class="a-header" href="#topics" onclick="createTopicTrending(event, 'sports')">Esportes</a>
-                        <a class="a-header" href="#topics" onclick="createTopicTrending(event, 'politics')">Política</a>
-                        <a class="a-header" href="#topics" onclick="createTopicTrending(event, 'technology')">Tecnologia</a>
-                        <a class="a-header" href="#topics" onclick="createTopicTrending(event, 'health')">Saúde</a>
-                        <a class="a-header" href="#topics" onclick="createTopicTrending(event, 'science')">Ciência</a>
-                        <a class="a-header" href="#topics" onclick="createTopicTrending(event, 'entertainment')">Entretenimento</a>
+                        <a class="a-header" href="#" onclick="createTopicTrending(event, 'sports')">Esportes</a>
+                        <a class="a-header" href="#" onclick="createTopicTrending(event, 'politics')">Política</a>
+                        <a class="a-header" href="#" onclick="createTopicTrending(event, 'technology')">Tecnologia</a>
+                        <a class="a-header" href="#" onclick="createTopicTrending(event, 'health')">Saúde</a>
+                        <a class="a-header" href="#" onclick="createTopicTrending(event, 'science')">Ciência</a>
+                        <a class="a-header" href="#" onclick="createTopicTrending(event, 'entertainment')">Entretenimento</a>
                         <a class="a-header" href="#">Favoritos</a>
                     </li>
 
@@ -48,12 +48,14 @@
                         </div>
                     </header>
 
-                    <h1 class="trending-title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat neque animi rerum
+                    <h1 class="trending-title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat neque
+                        animi rerum
                         laborum
                         laboriosam perspiciatis tenetur eos temporibus quas aperiam. Adipisci at quae, unde
                         itaque
                         nam sit fuga inventore illo!</h1>
-                    <p class="trending-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus minus praesentium
+                    <p class="trending-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Voluptatibus minus praesentium
                         autem eius porro veniam quas magni quidem. Obcaecati fuga ad perspiciatis sapiente
                         alias.
                         Omnis possimus officia maxime illum assumenda?</p>
@@ -80,12 +82,17 @@
                 <nav class="news-nav">
                     <ul class="nav-items">
                         <li>
-                            <a href="#" class="news-section-links" onclick="createTopicCard(event, 'sports')">Esportes</a>
-                            <a href="#" class="news-section-links" onclick="createTopicCard(event, 'politics')">Política</a>
-                            <a href="#" class="news-section-links" onclick="createTopicCard(event, 'technology')">Tecnologia</a>
+                            <a href="#" class="news-section-links"
+                                onclick="createTopicCard(event, 'sports')">Esportes</a>
+                            <a href="#" class="news-section-links"
+                                onclick="createTopicCard(event, 'politics')">Política</a>
+                            <a href="#" class="news-section-links"
+                                onclick="createTopicCard(event, 'technology')">Tecnologia</a>
                             <a href="#" class="news-section-links" onclick="createTopicCard(event, 'health')">Saúde</a>
-                            <a href="#" class="news-section-links" onclick="createTopicCard(event, 'science')">Ciência</a>
-                            <a href="#" class="news-section-links" onclick="createTopicCard(event, 'entertainment')">Entretenimento</a>
+                            <a href="#" class="news-section-links"
+                                onclick="createTopicCard(event, 'science')">Ciência</a>
+                            <a href="#" class="news-section-links"
+                                onclick="createTopicCard(event, 'entertainment')">Entretenimento</a>
                             <a href="#" class="news-section-links">Favoritos</a>
                         </li>
                         <li>
