Criação da funcionalidade do ícone, criação de funções e alteração no header de noticia.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
                         <a class="a-header" href="#" onclick="createTopicTrending(event, 'health')">Saúde</a>
                         <a class="a-header" href="#" onclick="createTopicTrending(event, 'science')">Ciência</a>
                         <a class="a-header" href="#" onclick="createTopicTrending(event, 'entertainment')">Entretenimento</a>
-                        <a class="a-header" href="#">Favoritos</a>
                     </li>
 
                 </ul>
@@ -93,7 +92,7 @@
                                 onclick="createTopicCard(event, 'science')">Ciência</a>
                             <a href="#" class="news-section-links"
                                 onclick="createTopicCard(event, 'entertainment')">Entretenimento</a>
-                            <a href="#" class="news-section-links">Favoritos</a>
+                            <a href="#" class="news-section-links" onclick="createFavoriteCard(event)">Favoritos</a>
                         </li>
                         <li>
                             <i class="far fa-newspaper"></i>
