Alteração no hover do icone bookmark

--- a/noticia.html
+++ b/noticia.html
@@ -46,7 +46,7 @@
                 <div class="article-header">
                     <span class="date-notice">Time| </span>
                     <span class="author"> Author </span>
-
+                    <i class="far fa-bookmark"></i>
                 </div>
                 <div class="article-content">
                     <p class="notice-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
