Arrumar a responsividade e menu hamburguer

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <nav>
+            <nav id="menu">
                 <ul id="ul-header">
                     <li>
                         <img class="logo" src="./assets/img/logo.png" alt="logo News G2" />
@@ -271,6 +271,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./js/index.js"></script>
+    <script src="./js/hamb.js"></script>
 </body>
 
 </html>
